profilelist1exp/unpackaged/objects/Quote__c.object
<CustomObject>
    <description>This object is to store the quote Ids flown fromQuoting System to OSC and then to SFDC</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the quote Id from Quoting System</description>
        <externalId>true</externalId>
        <label>Quote Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is to store the Solution Ids which has creating deal from OSC</description>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>SFDC Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>